cmake_minimum_required(VERSION 3.15)
project(atto_test_task VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(ENABLE_DATABASE_CACHE_EXECUTABLE "Build database_cache executable" ON)
add_subdirectory(src/file_sort)
add_subdirectory(src/database_cache)
add_subdirectory(tests/database_cache)